# albany-ros-pkg

./: ProjectHome.md  ar_multi.cpp  download.sh  install.sh
2dnav_create/: manifest.xml
2dnav_create/launch/: 2dnav_create.launch
Motion/: SimpleArmMC.cc  SimpleArmMC.h
Shared/: NelsonInfo.h  RobotInfo.cc  RobotInfo.h
albany_chess/chess_board_locator/: mainpage.dox  manifest.xml
albany_chess/chess_executive/: manifest.xml  play.launch
albany_chess/chess_piece_locator/: CMakeLists.txt  manifest.xml
albany_chess/chess_piece_locator/include/: extract_pieces.h
albany_chess/chess_piece_locator/launch/: run.launch
albany_chess/chess_piece_locator/src/: extract_pieces.cpp
albany_nav/: stack.xml
albany_nav/locator/: mainpage.dox
albany_nav/slam_experiments/: manifest.xml
albany_nav/smart_ranger/: manifest.xml
albany_robots/: stack.xml
albany_robots/albany_common/: mainpage.dox  manifest.xml
albany_robots/albany_gui/: mainpage.dox  manifest.xml
albany_robots/albany_video/: mainpage.dox  manifest.xml
albany_robots/chiara/: README  manifest.xml
albany_robots/expression/: mainpage.dox  manifest.xml
albany_robots/nelson/: CMakeLists.txt  manifest.xml
albany_robots/rosalyn/: mainpage.dox  manifest.xml
albany_robots/social_msgs/: mainpage.dox
albany_robots/trike/: mainpage.dox
albany_vision/: stack.xml
behaviors/: fidtest.cc  fidtest.h
branches/config/: download.sh  (+1 more)
ex_move/: manifest.xml
ifollowu/: manifest.xml
ils_robots/: stack.xml
neato_robot/: stack.xml
office_courier/: mainpage.dox  manifest.xml
vision/: FiducialFinder.h
(+262 files in other folders)
